--- a/Microk8s/k8s-configuration/mongoexpress-deployment.yaml
+++ b/Microk8s/k8s-configuration/mongoexpress-deployment.yaml
@@ -34,4 +34,4 @@ spec:
           valueFrom:
             configMapKeyRef:
               name: mongodb-configmap
-              key: database_url
+              key: database-url
