--- a/Microk8s/k8s-configuration/mongoexpress-deployment.yaml
+++ b/Microk8s/k8s-configuration/mongoexpress-deployment.yaml
@@ -35,3 +35,17 @@ spec:
             configMapKeyRef:
               name: mongodb-configmap
               key: database-url
+---
+apiVersion: v1 
+kind: Service 
+metadata:
+  name: mongodb-service
+spec:
+  selector:
+    app: mongodb
+  type: LoadBalancer
+  ports:
+    - protocol: TCP
+      port: 8081
+      targetPort: 8081
+      nodePort: 30000
